--- a/css/main.css
+++ b/css/main.css
@@ -9,8 +9,9 @@ html {
 }
 
 body {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7) 30%, rgba(0, 0, 0, 0) 100%), url(../img/bg-image.webp);
   height: 100vh;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7) 30%, rgba(0, 0, 0, 0) 100%), url(../img/bg-image.webp);
+  background-attachment: fixed;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -72,6 +73,78 @@ body {
   transform: translateY(-0.6rem);
   grid-column: 2/4;
   grid-row: 3;
+}
+
+.history {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.history--title {
+  width: 100%;
+  font-size: 4.8rem;
+  font-weight: 600;
+  font-style: italic;
+  font-family: utopia-std-display, serif;
+  margin-bottom: 13rem;
+}
+.history--content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  row-gap: 1rem;
+  column-gap: 10rem;
+}
+.history--content--circle__1 {
+  grid-column: 1;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  background-color: #ffffff;
+  grid-row: 1;
+}
+.history--content--circle__2 {
+  grid-column: 2;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  background-color: #ffffff;
+  grid-row: 1;
+}
+.history--content--circle__3 {
+  grid-column: 3;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  background-color: #ffffff;
+  grid-row: 1;
+}
+.history--content--line {
+  width: 100%;
+  height: 0.1rem;
+  background-color: #ffffff;
+  align-self: center;
+  grid-column: 1/4;
+  grid-row: 1;
+}
+.history--content--arrow-end {
+  grid-column: 3;
+  grid-row: 1;
+  height: 1rem;
+  filter: invert(1);
+  justify-self: right;
+  rotate: -90deg;
+  translate: 50%;
+}
+.history--content--subtitle {
+  font-size: 3.2rem;
+  font-family: utopia-std-display, serif;
+}
+.history--content--text {
+  font-size: 24px;
+  margin-top: 2rem;
 }
 
 /*# sourceMappingURL=main.css.map */
