--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,8 +9,9 @@ html {
 }
 
 body {
-    background-image: linear-gradient(0deg, rgba(0,0,0,0.7) 30%, rgba(0,0,0,0) 100%), url(../img/bg-image.webp);
     height: 100vh;
+    background-image: linear-gradient(0deg, rgba(0,0,0,0.7) 30%, rgba(0,0,0,0) 100%), url(../img/bg-image.webp);
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -76,5 +77,71 @@ body {
         transform: translateY(-0.6rem);
         grid-column: 2/4;
         grid-row: 3;
+    }
+}
+
+.history {
+
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &--title {
+        width: 100%;
+        font-size: 4.8rem;
+        font-weight: 600;
+        font-style: italic;
+        font-family: utopia-std-display, serif;
+        margin-bottom: 13rem;
+    }
+
+    &--content {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto auto auto;
+        row-gap: 1rem;
+        column-gap: 10rem;
+
+        @for $i from 1 through 3 {
+            &--circle__#{$i} {
+                grid-column: $i;
+                height: 1rem;
+                width: 1rem;
+                border-radius: 50%;
+                background-color: #ffffff;
+                grid-row: 1;
+            }
+        }
+
+        &--line {
+            width: 100%;
+            height: 0.1rem;
+            background-color: #ffffff;
+            align-self: center;
+            grid-column: 1/4;
+            grid-row: 1;
+        }
+
+        &--arrow-end {
+            grid-column: 3;
+            grid-row: 1;
+            height: 1rem;
+            filter: invert(1);
+            justify-self: right;
+            rotate: -90deg;
+            translate: 50%;
+        }
+        
+        &--subtitle {
+            font-size: 3.2rem;
+            font-family: utopia-std-display, serif;
+        }
+
+        &--text {
+            font-size: 24px;
+            margin-top: 2rem;
+        }
     }
 }
