--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html {
 h2 {
   width: 100%;
   font-size: 4.8rem;
-  font-weight: 600;
+  font-weight: 400;
   font-style: italic;
   font-family: utopia-std-display, serif;
   margin-bottom: 13rem;
@@ -141,6 +141,7 @@ body .background::after {
   border-radius: 50%;
   background-color: #ffffff;
   grid-row: 1;
+  transition: all 0.2s ease;
 }
 .history--content--circle__2 {
   grid-column: 2;
@@ -149,6 +150,7 @@ body .background::after {
   border-radius: 50%;
   background-color: #ffffff;
   grid-row: 1;
+  transition: all 0.2s ease;
 }
 .history--content--circle__3 {
   grid-column: 3;
@@ -157,14 +159,15 @@ body .background::after {
   border-radius: 50%;
   background-color: #ffffff;
   grid-row: 1;
+  transition: all 0.2s ease;
 }
 .history--content--line {
-  width: 100%;
   height: 0.1rem;
   background-color: #ffffff;
   align-self: center;
   grid-column: 1/4;
   grid-row: 1;
+  transition: all 1.2s ease;
 }
 .history--content--arrow-end {
   grid-column: 3;
@@ -174,10 +177,12 @@ body .background::after {
   justify-self: right;
   rotate: -90deg;
   translate: 50%;
+  transition: all 0.2s ease;
 }
 .history--content--subtitle {
   font-size: 3.2rem;
-  font-family: utopia-std-display, serif;
+  font-weight: 600;
+  margin-top: 2rem;
 }
 .history--content--text {
   font-size: 24px;
@@ -215,7 +220,7 @@ body .background::after {
 .expositions h3 {
   position: relative;
   font-size: 4.8rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 .expositions h3::after {
   content: "";
