--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@ html {
 h2 {
     width: 100%;
     font-size: 4.8rem;
-    font-weight: 600;
+    font-weight: 400;
     font-style: italic;
     font-family: utopia-std-display, serif;
     margin-bottom: 13rem;
@@ -150,16 +150,17 @@ body {
                 border-radius: 50%;
                 background-color: #ffffff;
                 grid-row: 1;
+                transition: all 0.2s ease;
             }
         }
 
         &--line {
-            width: 100%;
             height: 0.1rem;
             background-color: #ffffff;
             align-self: center;
             grid-column: 1/4;
             grid-row: 1;
+            transition: all 1.2s ease;
         }
 
         &--arrow-end {
@@ -170,11 +171,13 @@ body {
             justify-self: right;
             rotate: -90deg;
             translate: 50%;
+            transition: all 0.2s ease;
         }
         
         &--subtitle {
             font-size: 3.2rem;
-            font-family: utopia-std-display, serif;
+            font-weight: 600;
+            margin-top: 2rem;
         }
 
         &--text {
@@ -219,7 +222,7 @@ body {
     h3 {
         position: relative;
         font-size: 4.8rem;
-        font-weight: 600;
+        font-weight: 500;
 
         &::after {
             content: '';
