--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,9 @@
+@use './abstracts/mixins' as *;
+
 :root {
     --opacity: 0;
+    --height: 0;
+    --width: 0;
 }
 
 * {
@@ -13,12 +17,29 @@ html {
 }
 
 h2 {
+    position: relative;
     width: 100%;
     font-size: 4.8rem;
     font-weight: 400;
     font-style: italic;
     font-family: utopia-std-display, serif;
     margin-bottom: 13rem;
+
+    @include breakpoint(600px) {
+        font-size: 3.2rem;
+        margin-bottom: 5rem;
+        margin-top: 10rem;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 0.1rem;
+            background-color: #1E1E1E;
+        }
+    }
 }
 
 body {
@@ -26,11 +47,17 @@ body {
     font-family: neue-haas-grotesk-display, sans-serif;
     padding: 0 calc(100%/12);
 
+    @include breakpoint(600px) {
+        color: #1E1E1E;
+        background-color: #f1e6d6;
+        padding: 2rem 2rem;
+    }
+
     .background {
         position: fixed;
         top: 0;
         left: 0;
-        height: 100vh;
+        height: 100%;
         width: 100%;
         background-image: url(../img/bg-image.webp);
         background-attachment: fixed;
@@ -40,6 +67,10 @@ body {
         scale: 1.1;
         translate: 0 5%;
         z-index: -2;
+
+        @include breakpoint(600px) {
+            display: none;
+        }
 
         &::before {
             content: '';
@@ -66,16 +97,6 @@ body {
     }
 }
 
-.scroll-arrow {
-    position: fixed;
-    display: none;
-    bottom: 0;
-    left: 50%;
-    height: 40px;
-    filter: invert(1);
-    transform: translateX(-50%);
-}
-
 .home-screen {
     height: 100vh;
     display: grid;
@@ -85,12 +106,25 @@ body {
     column-gap: 1rem;
     padding-bottom: 7rem;
 
+    @include breakpoint(600px) {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        height: fit-content;
+        width: 100%;
+        padding-bottom: 0;
+    }
+
     h1 {
         font-size: 4.8rem;
         line-height: 4.8rem;
         font-weight: 400;
         white-space: nowrap;
         grid-row: 1/4;
+
+        @include breakpoint(600px) {
+            margin-bottom: 1rem;
+        }
     }
 
     h2 {
@@ -114,6 +148,17 @@ body {
             grid-row: 3;
             grid-column: 4;
         }
+
+        @include breakpoint(600px) {
+            font-size: 2.5rem;
+            line-height: 2.5rem;
+            opacity: 0.8;
+            margin-top: 0;
+
+            &::after {
+                display: none;
+            }
+        }
     }
 
     .decorative-div {
@@ -124,6 +169,20 @@ body {
         transform: translateY(-0.6rem);
         grid-column: 2/4;
         grid-row: 3;
+
+        @include breakpoint(600pc) {
+            display: none;
+        }
+    }
+
+    .mobile-image {
+        display: none;
+
+        @include breakpoint(600px) {
+            display: inline;
+            width: 100%;
+            margin-bottom: 1rem;
+        }
     }
 }
 
@@ -141,6 +200,13 @@ body {
         grid-template-rows: auto auto auto;
         row-gap: 1rem;
         column-gap: 10rem;
+
+        // enlève les élements graphiques de la timeline (mobile)
+        > div, > img {
+            @include breakpoint(600px) {
+                display: none;
+            }
+        }
 
         @for $i from 1 through 3 {
             &--circle__#{$i} {
@@ -178,13 +244,46 @@ body {
             font-size: 3.2rem;
             font-weight: 600;
             margin-top: 2rem;
+
+            @include breakpoint(600px) {
+                font-size: 2.4rem;
+            }
         }
 
         &--text {
             font-size: 24px;
             margin-top: 2rem;
             max-width: 30ch;
+
+            @include breakpoint(600px) {
+                font-size: 2rem;
+            }
         }
+
+        @include breakpoint(600px) {
+            display: flex;
+            flex-direction: column;
+
+            .subtitle2 {
+                order: 3;
+            }
+
+            .subtitle3 {
+                order: 5;
+            }
+
+            .text2 {
+                order: 4;
+            }
+
+            .text3 {
+                order: 6;
+            }
+        }
+    }
+
+    @include breakpoint(600px) {
+        padding-top: 0;
     }
 }
 
@@ -198,6 +297,11 @@ body {
     justify-content: center;
     align-items: center;
 
+    @include breakpoint(600px) {
+        padding-top: 0;
+        padding-bottom: 1rem;
+    }
+
     .expositions-container {
         width: 40vw;
         min-width: 80rem;
@@ -205,6 +309,12 @@ body {
         flex-direction: column;
         align-items: center;
         gap: 10rem;
+
+        @include breakpoint(600px) {
+            width: 100%;
+            min-width: auto;
+            gap: 5rem;
+        }
 
         > * {
             width: 100%;
@@ -224,6 +334,10 @@ body {
         font-size: 4.8rem;
         font-weight: 500;
 
+        @include breakpoint(600px) {
+            font-size: 2rem;
+        }
+
         &::after {
             content: '';
             position: absolute;
@@ -232,11 +346,33 @@ body {
             height: 0.1rem;
             width: 100%;
             background-color: #ffffff;
+            
+            @include breakpoint(600px) {
+                display: none;
+            }
         }
     }
 
     p {
         color: #ffffff90;
         font-size: 3.6rem;
+
+        @include breakpoint(600px) {
+            position: relative;
+            font-size: 2rem;
+            color: #1E1E1E;
+            opacity: 0.8;
+
+            &::after {
+                content: '';
+                position: absolute;
+                bottom: -2.5rem;
+                left: 0;
+                height: 0.1rem;
+                width: 100%;
+                background-color: #1E1E1E;
+                opacity: 0.2;
+            }
+        }
     }
 }
