--- a/scss/main.scss
+++ b/scss/main.scss
@@ -95,6 +95,24 @@ body {
     }
 }
 
+footer ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    list-style: none;
+
+    a {
+        padding-bottom: 2rem;
+        color: #ffffff;
+        font-size: 1.6rem;
+
+        @include breakpoint(600px) {
+            color: #1E1E1E;
+        }
+    }
+}
+
 .home-screen {
     height: 100vh;
     display: grid;
