--- a/css/main.css
+++ b/css/main.css
@@ -98,9 +98,9 @@ footer ul {
   align-items: center;
   gap: 2rem;
   list-style: none;
+  padding-bottom: 2rem;
 }
 footer ul a {
-  padding-bottom: 2rem;
   color: #ffffff;
   font-size: 1.6rem;
 }
@@ -393,6 +393,64 @@ footer ul a {
     background-color: #1E1E1E;
     opacity: 0.2;
   }
+}
+
+.pageSources {
+  color: #1E1E1E;
+  background-color: #f1e6d6;
+  padding: 10rem 8.3333333333%;
+}
+.pageSources a {
+  position: relative;
+  text-decoration: none;
+}
+.pageSources a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 0.1rem;
+  width: 100%;
+  background-color: #1E1E1E;
+}
+.pageSources main > a {
+  color: #1E1E1E;
+  opacity: 0.7;
+  font-size: 2rem;
+}
+@media screen and (max-width: 600px) {
+  .pageSources main > a {
+    font-size: 1.6rem;
+  }
+}
+.pageSources h1 {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+  font-size: 5rem;
+  font-weight: 500;
+}
+@media screen and (max-width: 600px) {
+  .pageSources h1 {
+    font-size: 3.2rem;
+  }
+}
+.pageSources ul {
+  list-style: none;
+}
+.pageSources ul li a {
+  color: #1E1E1E;
+  font-size: 2rem;
+}
+@media screen and (max-width: 600px) {
+  .pageSources ul li a {
+    font-size: 1.6rem;
+  }
+}
+.pageSources footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
 }
 
 /*# sourceMappingURL=main.css.map */
