--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,9 +101,9 @@ footer ul {
     align-items: center;
     gap: 2rem;
     list-style: none;
+    padding-bottom: 2rem;
 
     a {
-        padding-bottom: 2rem;
         color: #ffffff;
         font-size: 1.6rem;
 
@@ -392,5 +392,68 @@ footer ul {
                 opacity: 0.2;
             }
         }
+    }
+}
+
+.pageSources {
+    color: #1E1E1E;
+    background-color: #f1e6d6 ;
+    padding: 10rem calc(100%/12);
+
+    a {
+        position: relative;
+        text-decoration: none;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 0.1rem;
+            width: 100%;
+            background-color: #1E1E1E;
+        }
+    }
+
+    main > a {
+        color: #1E1E1E;
+        opacity: 0.7;
+        font-size: 2rem;
+
+        @include breakpoint(600px) {
+            font-size: 1.6rem;
+        }
+    }
+
+    h1 {
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+        font-size: 5rem;
+        font-weight: 500;
+
+        @include breakpoint(600px) {
+            font-size: 3.2rem;
+        }
+    }
+
+    ul {
+        list-style: none;
+
+        li a {
+            color: #1E1E1E ;
+            font-size: 2rem;
+
+            @include breakpoint(600px) {
+                font-size: 1.6rem;
+            }
+        }
+    }
+    
+
+    footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100vw;
     }
 }
