--- a/scss/main.scss
+++ b/scss/main.scss
@@ -110,6 +110,10 @@ footer ul {
         @include breakpoint(600px) {
             color: #1E1E1E;
         }
+
+        &:hover {
+            opacity: 0.5;
+        }
     }
 }
 
@@ -413,6 +417,10 @@ footer ul {
             width: 100%;
             background-color: #1E1E1E;
         }
+
+        &:hover {
+            opacity: 0.5;
+        }
     }
 
     main > a {
@@ -422,6 +430,10 @@ footer ul {
 
         @include breakpoint(600px) {
             font-size: 1.6rem;
+        }
+
+        &:hover {
+            opacity: 0.5;
         }
     }
 
@@ -436,7 +448,7 @@ footer ul {
         }
     }
 
-    ul {
+    main ul {
         list-style: none;
 
         li a {
@@ -455,5 +467,9 @@ footer ul {
         bottom: 0;
         left: 0;
         width: 100vw;
+
+        a {
+            color: #1E1E1E;
+        }
     }
 }
