Fix du responsive mobile en mode paysage

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -1,5 +1,7 @@
 @mixin breakpoint($width) {
-    @media screen and (max-width: $width) {
+    @media screen and (max-width: $width),
+    // permet d'activer le responsive aussi en mode paysage
+    screen and (max-height: $width) and (orientation: landscape) {
         @content
     }
 }
