--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ h2 {
   font-family: utopia-std-display, serif;
   margin-bottom: 13rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   h2 {
     font-size: 3.2rem;
     margin-bottom: 5rem;
@@ -43,7 +43,7 @@ body {
   font-family: neue-haas-grotesk-display, sans-serif;
   padding: 0 8.3333333333%;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   body {
     color: #1E1E1E;
     background-color: #f1e6d6;
@@ -65,7 +65,7 @@ body .background {
   translate: 0 5%;
   z-index: -2;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   body .background {
     display: none;
   }
@@ -104,7 +104,7 @@ footer ul a {
   color: #ffffff;
   font-size: 1.6rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   footer ul a {
     color: #1E1E1E;
   }
@@ -122,7 +122,7 @@ footer ul a:hover {
   column-gap: 1rem;
   padding-bottom: 7rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .home-screen {
     display: flex;
     flex-direction: column;
@@ -139,7 +139,7 @@ footer ul a:hover {
   white-space: nowrap;
   grid-row: 1/4;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .home-screen h1 {
     margin-bottom: 1rem;
   }
@@ -164,7 +164,7 @@ footer ul a:hover {
   grid-row: 3;
   grid-column: 4;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .home-screen h2 {
     font-size: 2.5rem;
     line-height: 2.5rem;
@@ -184,7 +184,7 @@ footer ul a:hover {
   grid-column: 2/4;
   grid-row: 3;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .home-screen .decorative-div {
     display: none;
   }
@@ -192,7 +192,7 @@ footer ul a:hover {
 .home-screen .mobile-image {
   display: none;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .home-screen .mobile-image {
     display: inline;
     width: 100%;
@@ -215,7 +215,7 @@ footer ul a:hover {
   row-gap: 1rem;
   column-gap: 10rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .history--content > div, .history--content > img {
     display: none;
   }
@@ -270,7 +270,7 @@ footer ul a:hover {
   font-weight: 600;
   margin-top: 2rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .history--content--subtitle {
     font-size: 2.4rem;
   }
@@ -280,13 +280,13 @@ footer ul a:hover {
   margin-top: 2rem;
   max-width: 30ch;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .history--content--text {
     font-size: 2rem;
     max-width: none;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .history--content {
     display: flex;
     flex-direction: column;
@@ -304,7 +304,7 @@ footer ul a:hover {
     order: 6;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .history {
     padding-top: 0;
   }
@@ -320,7 +320,7 @@ footer ul a:hover {
   justify-content: center;
   align-items: center;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .expositions {
     padding-top: 0;
     padding-bottom: 10rem;
@@ -335,7 +335,7 @@ footer ul a:hover {
   align-items: center;
   gap: 10rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .expositions .expositions-container {
     width: 100%;
     min-width: auto;
@@ -356,7 +356,7 @@ footer ul a:hover {
   font-size: 4.8rem;
   font-weight: 500;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .expositions h3 {
     font-size: 2rem;
   }
@@ -370,7 +370,7 @@ footer ul a:hover {
   width: 100%;
   background-color: #ffffff;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .expositions h3::after {
     display: none;
   }
@@ -379,7 +379,7 @@ footer ul a:hover {
   color: rgba(255, 255, 255, 0.5647058824);
   font-size: 3.6rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .expositions p {
     position: relative;
     font-size: 2rem;
@@ -424,7 +424,7 @@ footer ul a:hover {
   opacity: 0.7;
   font-size: 2rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .pageSources main > a {
     font-size: 1.6rem;
   }
@@ -438,7 +438,7 @@ footer ul a:hover {
   font-size: 5rem;
   font-weight: 500;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .pageSources h1 {
     font-size: 3.2rem;
   }
@@ -450,7 +450,7 @@ footer ul a:hover {
   color: #1E1E1E;
   font-size: 2rem;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
   .pageSources main ul li a {
     font-size: 1.6rem;
   }
