--- a/css/main.css
+++ b/css/main.css
@@ -21,9 +21,13 @@ h2 {
   font-family: utopia-std-display, serif;
   margin-bottom: 13rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 1400px) {
   h2 {
     font-size: 3.2rem;
+  }
+}
+@media screen and (max-width: 900px) {
+  h2 {
     margin-bottom: 5rem;
     margin-top: 10rem;
   }
@@ -43,7 +47,7 @@ body {
   font-family: neue-haas-grotesk-display, sans-serif;
   padding: 0 8.3333333333%;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   body {
     color: #1E1E1E;
     background-color: #f1e6d6;
@@ -65,7 +69,7 @@ body .background {
   translate: 0 5%;
   z-index: -2;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   body .background {
     display: none;
   }
@@ -104,7 +108,7 @@ footer ul a {
   color: #ffffff;
   font-size: 1.6rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   footer ul a {
     color: #1E1E1E;
   }
@@ -122,7 +126,7 @@ footer ul a:hover {
   column-gap: 1rem;
   padding-bottom: 7rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .home-screen {
     display: flex;
     flex-direction: column;
@@ -139,7 +143,7 @@ footer ul a:hover {
   white-space: nowrap;
   grid-row: 1/4;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .home-screen h1 {
     margin-bottom: 1rem;
   }
@@ -164,7 +168,7 @@ footer ul a:hover {
   grid-row: 3;
   grid-column: 4;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .home-screen h2 {
     font-size: 2.5rem;
     line-height: 2.5rem;
@@ -184,7 +188,7 @@ footer ul a:hover {
   grid-column: 2/4;
   grid-row: 3;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .home-screen .decorative-div {
     display: none;
   }
@@ -192,7 +196,7 @@ footer ul a:hover {
 .home-screen .mobile-image {
   display: none;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .home-screen .mobile-image {
     display: inline;
     width: 100%;
@@ -215,7 +219,7 @@ footer ul a:hover {
   row-gap: 1rem;
   column-gap: 10rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .history--content > div, .history--content > img {
     display: none;
   }
@@ -270,7 +274,7 @@ footer ul a:hover {
   font-weight: 600;
   margin-top: 2rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 1400px) {
   .history--content--subtitle {
     font-size: 2.4rem;
   }
@@ -280,13 +284,13 @@ footer ul a:hover {
   margin-top: 2rem;
   max-width: 30ch;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 1400px) {
   .history--content--text {
     font-size: 2rem;
     max-width: none;
   }
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .history--content {
     display: flex;
     flex-direction: column;
@@ -304,7 +308,7 @@ footer ul a:hover {
     order: 6;
   }
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .history {
     padding-top: 0;
   }
@@ -320,7 +324,7 @@ footer ul a:hover {
   justify-content: center;
   align-items: center;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .expositions {
     padding-top: 0;
     padding-bottom: 10rem;
@@ -335,7 +339,7 @@ footer ul a:hover {
   align-items: center;
   gap: 10rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .expositions .expositions-container {
     width: 100%;
     min-width: auto;
@@ -356,7 +360,12 @@ footer ul a:hover {
   font-size: 4.8rem;
   font-weight: 500;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 1400px) {
+  .expositions h3 {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 900px) {
   .expositions h3 {
     font-size: 2rem;
   }
@@ -370,7 +379,7 @@ footer ul a:hover {
   width: 100%;
   background-color: #ffffff;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .expositions h3::after {
     display: none;
   }
@@ -379,7 +388,12 @@ footer ul a:hover {
   color: rgba(255, 255, 255, 0.5647058824);
   font-size: 3.6rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 1400px) {
+  .expositions p {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 900px) {
   .expositions p {
     position: relative;
     font-size: 2rem;
@@ -424,7 +438,7 @@ footer ul a:hover {
   opacity: 0.7;
   font-size: 2rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .pageSources main > a {
     font-size: 1.6rem;
   }
@@ -438,7 +452,7 @@ footer ul a:hover {
   font-size: 5rem;
   font-weight: 500;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .pageSources h1 {
     font-size: 3.2rem;
   }
@@ -450,7 +464,7 @@ footer ul a:hover {
   color: #1E1E1E;
   font-size: 2rem;
 }
-@media screen and (max-width: 600px), screen and (max-height: 600px) and (orientation: landscape) {
+@media screen and (max-width: 900px) {
   .pageSources main ul li a {
     font-size: 1.6rem;
   }
