--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,8 +23,11 @@ h2 {
     font-family: utopia-std-display, serif;
     margin-bottom: 13rem;
 
-    @include breakpoint(600px) {
+    @include breakpoint(1400px) {
         font-size: 3.2rem;
+    }
+
+    @include breakpoint(900px) {
         margin-bottom: 5rem;
         margin-top: 10rem;
 
@@ -45,7 +48,7 @@ body {
     font-family: neue-haas-grotesk-display, sans-serif;
     padding: 0 calc(100%/12);
 
-    @include breakpoint(600px) {
+    @include breakpoint(900px) {
         color: #1E1E1E;
         background-color: #f1e6d6;
         padding: 2rem 2rem;
@@ -66,7 +69,7 @@ body {
         translate: 0 5%;
         z-index: -2;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             display: none;
         }
 
@@ -107,7 +110,7 @@ footer ul {
         color: #ffffff;
         font-size: 1.6rem;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             color: #1E1E1E;
         }
 
@@ -126,7 +129,7 @@ footer ul {
     column-gap: 1rem;
     padding-bottom: 7rem;
 
-    @include breakpoint(600px) {
+    @include breakpoint(900px) {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -142,7 +145,7 @@ footer ul {
         white-space: nowrap;
         grid-row: 1/4;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             margin-bottom: 1rem;
         }
     }
@@ -169,7 +172,7 @@ footer ul {
             grid-column: 4;
         }
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             font-size: 2.5rem;
             line-height: 2.5rem;
             opacity: 0.8;
@@ -190,7 +193,7 @@ footer ul {
         grid-column: 2/4;
         grid-row: 3;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             display: none;
         }
     }
@@ -198,7 +201,7 @@ footer ul {
     .mobile-image {
         display: none;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             display: inline;
             width: 100%;
             margin-bottom: 1rem;
@@ -223,7 +226,7 @@ footer ul {
 
         // enlève les élements graphiques de la timeline (mobile)
         > div, > img {
-            @include breakpoint(600px) {
+            @include breakpoint(900px) {
                 display: none;
             }
         }
@@ -265,7 +268,7 @@ footer ul {
             font-weight: 600;
             margin-top: 2rem;
 
-            @include breakpoint(600px) {
+            @include breakpoint(1400px) {
                 font-size: 2.4rem;
             }
         }
@@ -275,13 +278,13 @@ footer ul {
             margin-top: 2rem;
             max-width: 30ch;
 
-            @include breakpoint(600px) {
+            @include breakpoint(1400px) {
                 font-size: 2rem;
                 max-width: none;
             }
         }
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             display: flex;
             flex-direction: column;
 
@@ -303,7 +306,7 @@ footer ul {
         }
     }
 
-    @include breakpoint(600px) {
+    @include breakpoint(900px) {
         padding-top: 0;
     }
 }
@@ -318,7 +321,7 @@ footer ul {
     justify-content: center;
     align-items: center;
 
-    @include breakpoint(600px) {
+    @include breakpoint(900px) {
         padding-top: 0;
         padding-bottom: 10rem;
         min-height: auto;
@@ -332,7 +335,7 @@ footer ul {
         align-items: center;
         gap: 10rem;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             width: 100%;
             min-width: auto;
             gap: 5rem;
@@ -342,6 +345,7 @@ footer ul {
             width: 100%;
 
             @for $i from 1 through 4 {
+                // alterne l'alignement du texte une fois sur deux
                 @if ($i%2==1) {
                     &:nth-child(#{$i}) {
                         text-align: right;
@@ -356,7 +360,11 @@ footer ul {
         font-size: 4.8rem;
         font-weight: 500;
 
-        @include breakpoint(600px) {
+        @include breakpoint(1400px) {
+            font-size: 3rem;
+        }
+
+        @include breakpoint(900px) {
             font-size: 2rem;
         }
 
@@ -369,7 +377,7 @@ footer ul {
             width: 100%;
             background-color: #ffffff;
             
-            @include breakpoint(600px) {
+            @include breakpoint(900px) {
                 display: none;
             }
         }
@@ -379,7 +387,11 @@ footer ul {
         color: #ffffff90;
         font-size: 3.6rem;
 
-        @include breakpoint(600px) {
+        @include breakpoint(1400px) {
+            font-size: 3rem;
+        }
+
+        @include breakpoint(900px) {
             position: relative;
             font-size: 2rem;
             color: #1E1E1E;
@@ -428,7 +440,7 @@ footer ul {
         opacity: 0.7;
         font-size: 2rem;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             font-size: 1.6rem;
         }
 
@@ -443,7 +455,7 @@ footer ul {
         font-size: 5rem;
         font-weight: 500;
 
-        @include breakpoint(600px) {
+        @include breakpoint(900px) {
             font-size: 3.2rem;
         }
     }
@@ -455,7 +467,7 @@ footer ul {
             color: #1E1E1E ;
             font-size: 2rem;
 
-            @include breakpoint(600px) {
+            @include breakpoint(900px) {
                 font-size: 1.6rem;
             }
         }
