--- a/css/main.css
+++ b/css/main.css
@@ -339,11 +339,12 @@ footer ul a:hover {
   align-items: center;
   gap: 10rem;
 }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1200px) {
   .expositions .expositions-container {
     width: 100%;
     min-width: auto;
     gap: 5rem;
+    padding: 0 5rem;
   }
 }
 .expositions .expositions-container > * {
@@ -357,7 +358,7 @@ footer ul a:hover {
 }
 .expositions h3 {
   position: relative;
-  font-size: 4.8rem;
+  font-size: 4rem;
   font-weight: 500;
 }
 @media screen and (max-width: 1400px) {
