--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,9 +122,15 @@ footer ul {
 
 .home-screen {
     height: 100vh;
+    /* sans le display grid, la ligne décorative n'irait pas jusqu'au bout car le h2 prends la largeur du plus gros contenu */
     display: grid;
     grid-template-columns: min-content auto auto min-content;
     grid-template-rows: auto min-content min-content;
+    /* organisation du grid en areas pour se repérer plus facilement */
+    grid-template-areas: 
+        "h1  .    .    .  "
+        "h1  .   h2_1 h2_1"
+        "h1 line line h2_2";
     align-items: end;
     column-gap: 1rem;
     padding-bottom: 7rem;
@@ -143,7 +149,7 @@ footer ul {
         line-height: 4.8rem;
         font-weight: 400;
         white-space: nowrap;
-        grid-row: 1/4;
+        grid-area: h1;
 
         @include breakpoint(900px) {
             margin-bottom: 1rem;
@@ -163,13 +169,13 @@ footer ul {
         margin-bottom: 0;
 
         &.h2-pt1 {
-            grid-row: 2;
-            grid-column: 3/5;
+            /* séparation du h2 en deux lignes pour que leurs largeurs soient indépendantes */
+            grid-area: h2_1;
         }
 
         &.h2-pt2 {
-            grid-row: 3;
-            grid-column: 4;
+            /* séparation du h2 en deux lignes pour que leurs largeurs soient indépendantes */
+            grid-area: h2_2;
         }
 
         @include breakpoint(900px) {
@@ -185,13 +191,13 @@ footer ul {
     }
 
     .decorative-div {
+        /* utilisation d'un div au lieu d'un ::before ou ::after pour plus de facilité de placement */
         height: 0.1rem;
         width: 100%;
         background-color: #ffffff;
         opacity: 0.2;
         transform: translateY(-0.6rem);
-        grid-column: 2/4;
-        grid-row: 3;
+        grid-area: line;
 
         @include breakpoint(900px) {
             display: none;
@@ -199,6 +205,7 @@ footer ul {
     }
 
     .mobile-image {
+        /* image qui s'affiche que sur mobile, à la place de l'image de fond */
         display: none;
 
         @include breakpoint(900px) {
@@ -218,6 +225,8 @@ footer ul {
 
     &--content {
         width: 100%;
+        /* utilisation d'un grid car plusieurs éléments sont alignés sur deux dimensions */
+        /* le grid permet aussi de supperposés des éléments, ici les ronds et la flèche sur la ligne */
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: auto auto auto;
@@ -228,21 +237,22 @@ footer ul {
             column-gap: 4rem;
         }
 
-        // enlève les élements graphiques de la timeline (mobile)
         > div, > img {
             @include breakpoint(900px) {
+                /* enlève les élements graphiques de la timeline (mobile) */
                 display: none;
             }
         }
 
+        // place automatiquement chaque cercle dans le grid
         @for $i from 1 through 3 {
             &--circle__#{$i} {
                 grid-column: $i;
+                grid-row: 1;
                 height: 1rem;
                 width: 1rem;
                 border-radius: 50%;
                 background-color: #ffffff;
-                grid-row: 1;
                 transition: all 0.2s ease;
             }
         }
@@ -291,6 +301,8 @@ footer ul {
         }
 
         @include breakpoint(900px) {
+            /* les textes ont été placés de sorte à ce qu'ils se placent naturellement dans le grid */
+            /* sur mobile, l'affichage passe en flex, c'est pourquoi on change l'ordre des textes afin qu'ils apparaissent en dessous de leur titre respectif */
             display: flex;
             flex-direction: column;
 
@@ -355,8 +367,8 @@ footer ul {
         > * {
             width: 100%;
 
+            // alterne l'alignement du texte une fois sur deux
             @for $i from 1 through 4 {
-                // alterne l'alignement du texte une fois sur deux
                 @if ($i%2==1) {
                     &:nth-child(#{$i}) {
                         text-align: right;
