Reorganisation du scss en suivant le modèle 7-1

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,510 +1,18 @@
-@use './abstracts/mixins' as *;
+@use 'abstracts/mixins' as *;
+@use 'abstracts/variables' as *;
+
+@use 'base/reset';
+
+@use 'components/h2';
+
+@use 'layout/body'; 
+@use 'layout/expositions';
+@use 'layout/footer';
+@use 'layout/history';
+@use 'layout/home';
+
+@use 'pages/sources';
 
 :root {
     --opacity: 0;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-h2 {
-    position: relative;
-    width: 100%;
-    font-size: 4.8rem;
-    font-weight: 400;
-    font-style: italic;
-    font-family: utopia-std-display, serif;
-    margin-bottom: 13rem;
-
-    @include breakpoint(1400px) {
-        font-size: 3.2rem;
-    }
-
-    @include breakpoint(900px) {
-        margin-bottom: 5rem;
-        margin-top: 10rem;
-
-        &::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 0.1rem;
-            background-color: #1E1E1E;
-        }
-    }
-}
-
-body {
-    color: #ffffff;
-    font-family: neue-haas-grotesk-display, sans-serif;
-    padding: 0 calc(100%/12);
-
-    @include breakpoint(900px) {
-        color: #1E1E1E;
-        background-color: #f1e6d6;
-        padding: 2rem 2rem;
-    }
-
-    .background {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        background-image: url(../img/bg-image.webp);
-        background-attachment: fixed;
-        background-position: top;
-        background-size: cover;
-        background-repeat: no-repeat;
-        scale: 1.1;
-        translate: 0 5%;
-        z-index: -2;
-
-        @include breakpoint(900px) {
-            display: none;
-        }
-
-        &::before {
-            content: '';
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            height: 100%;
-            width: 100%;
-            background-image: linear-gradient(0deg, rgba(0,0,0,0.7) 30%, rgba(0,0,0,0) 100%);
-            z-index: -2;
-        }
-    
-        &::after {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            background-color: #000000;
-            z-index: -1;
-            opacity: var(--opacity);
-        }
-    }
-}
-
-footer ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    list-style: none;
-    padding-bottom: 2rem;
-
-    a {
-        color: #ffffff;
-        font-size: 1.6rem;
-
-        @include breakpoint(900px) {
-            color: #1E1E1E;
-        }
-
-        &:hover {
-            opacity: 0.5;
-        }
-    }
-}
-
-.home-screen {
-    height: 100vh;
-    /* sans le display grid, la ligne décorative n'irait pas jusqu'au bout car le h2 prends la largeur du plus gros contenu */
-    display: grid;
-    grid-template-columns: min-content auto auto min-content;
-    grid-template-rows: auto min-content min-content;
-    /* organisation du grid en areas pour se repérer plus facilement */
-    grid-template-areas: 
-        "h1  .    .    .  "
-        "h1  .   h2_1 h2_1"
-        "h1 line line h2_2";
-    align-items: end;
-    column-gap: 1rem;
-    padding-bottom: 7rem;
-
-    @include breakpoint(900px) {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        height: fit-content;
-        width: 100%;
-        padding-bottom: 0;
-    }
-
-    h1 {
-        font-size: 4.8rem;
-        line-height: 4.8rem;
-        font-weight: 400;
-        white-space: nowrap;
-        grid-area: h1;
-
-        @include breakpoint(900px) {
-            margin-bottom: 1rem;
-        }
-    }
-
-    h2 {
-        width: fit-content;
-        font-family: utopia-std-display, serif;
-        font-size: 3.2rem;
-        line-height: 3.2rem;
-        font-weight: 400;
-        font-style: italic;
-        text-align: right;
-        white-space: nowrap;
-        width: 100%;
-        margin-bottom: 0;
-
-        &.h2-pt1 {
-            /* séparation du h2 en deux lignes pour que leurs largeurs soient indépendantes */
-            grid-area: h2_1;
-        }
-
-        &.h2-pt2 {
-            /* séparation du h2 en deux lignes pour que leurs largeurs soient indépendantes */
-            grid-area: h2_2;
-        }
-
-        @include breakpoint(900px) {
-            font-size: 2.5rem;
-            line-height: 2.5rem;
-            opacity: 0.8;
-            margin-top: 0;
-
-            &::after {
-                display: none;
-            }
-        }
-    }
-
-    .decorative-div {
-        /* utilisation d'un div au lieu d'un ::before ou ::after pour plus de facilité de placement */
-        height: 0.1rem;
-        width: 100%;
-        background-color: #ffffff;
-        opacity: 0.2;
-        transform: translateY(-0.6rem);
-        grid-area: line;
-
-        @include breakpoint(900px) {
-            display: none;
-        }
-    }
-
-    .mobile-image {
-        /* image qui s'affiche que sur mobile, à la place de l'image de fond */
-        display: none;
-
-        @include breakpoint(900px) {
-            display: inline;
-            width: 100%;
-            margin-bottom: 1rem;
-        }
-    }
-}
-
-.history {
-    padding-top: 25vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    &--content {
-        width: 100%;
-        /* utilisation d'un grid car plusieurs éléments sont alignés sur deux dimensions */
-        /* le grid permet aussi de supperposés des éléments, ici les ronds et la flèche sur la ligne */
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto auto auto;
-        row-gap: 1rem;
-        column-gap: 10rem;
-
-        @include breakpoint(1400px) {
-            column-gap: 4rem;
-        }
-
-        > div, > img {
-            @include breakpoint(900px) {
-                /* enlève les élements graphiques de la timeline (mobile) */
-                display: none;
-            }
-        }
-
-        // place automatiquement chaque cercle dans le grid
-        @for $i from 1 through 3 {
-            &--circle__#{$i} {
-                grid-column: $i;
-                grid-row: 1;
-                height: 1rem;
-                width: 1rem;
-                border-radius: 50%;
-                background-color: #ffffff;
-                transition: all 0.2s ease;
-            }
-        }
-
-        &--line {
-            height: 0.1rem;
-            background-color: #ffffff;
-            align-self: center;
-            grid-column: 1/4;
-            grid-row: 1;
-            transition: all 1.2s ease;
-        }
-
-        &--arrow-end {
-            grid-column: 3;
-            grid-row: 1;
-            height: 1rem;
-            filter: invert(1);
-            justify-self: right;
-            rotate: -90deg;
-            translate: 50%;
-            transition: all 0.2s ease;
-        }
-        
-        &--subtitle {
-            font-size: 3.2rem;
-            font-weight: 600;
-            margin-top: 2rem;
-
-            @include breakpoint(1400px) {
-                font-size: 2.4rem;
-            }
-        }
-
-        &--text {
-            font-size: 2.4rem;
-            line-height: 1.1em;
-            margin-top: 2rem;
-            max-width: 30ch;
-            word-spacing: 0.2rem;
-
-            @include breakpoint(1400px) {
-                font-size: 2rem;
-                max-width: 100%;
-            }
-        }
-
-        @include breakpoint(900px) {
-            /* les textes ont été placés de sorte à ce qu'ils se placent naturellement dans le grid */
-            /* sur mobile, l'affichage passe en flex, c'est pourquoi on change l'ordre des textes afin qu'ils apparaissent en dessous de leur titre respectif */
-            display: flex;
-            flex-direction: column;
-
-            .subtitle2 {
-                order: 3;
-            }
-
-            .subtitle3 {
-                order: 5;
-            }
-
-            .text2 {
-                order: 4;
-            }
-
-            .text3 {
-                order: 6;
-            }
-        }
-    }
-
-    @include breakpoint(900px) {
-        padding-top: 0;
-    }
-}
-
-.expositions {
-    padding-top: 25vh;
-    padding-bottom: 10vh;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    @include breakpoint(900px) {
-        padding-top: 0;
-        padding-bottom: 10rem;
-        min-height: auto;
-    }
-
-    .expositions-container {
-        width: 60vw;
-        min-width: 80rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10rem;
-
-        @include breakpoint(1400px) {
-            width: 100%;
-            min-width: auto;
-            gap: 5rem;
-            padding: 0 5rem;
-        }
-
-        @include breakpoint(1400px) {
-            padding: 0 0;
-        }
-
-        > * {
-            width: 100%;
-
-            // alterne l'alignement du texte une fois sur deux
-            @for $i from 1 through 4 {
-                @if ($i%2==1) {
-                    &:nth-child(#{$i}) {
-                        text-align: right;
-                    }
-                }
-            }
-        }
-    }
-
-    h3 {
-        position: relative;
-        font-size: 4rem;
-        font-weight: 500;
-
-        @include breakpoint(1400px) {
-            font-size: 3rem;
-        }
-
-        @include breakpoint(900px) {
-            font-size: 2rem;
-        }
-
-        &::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            height: 0.1rem;
-            width: 100%;
-            background-color: #ffffff;
-            
-            @include breakpoint(900px) {
-                display: none;
-            }
-        }
-    }
-
-    p {
-        color: #ffffff90;
-        font-size: 3.6rem;
-
-        @include breakpoint(1400px) {
-            font-size: 3rem;
-        }
-
-        @include breakpoint(900px) {
-            position: relative;
-            font-size: 2rem;
-            color: #1E1E1E;
-            opacity: 0.8;
-
-            &::after {
-                content: '';
-                position: absolute;
-                bottom: -2.5rem;
-                left: 0;
-                height: 0.1rem;
-                width: 100%;
-                background-color: #1E1E1E;
-                opacity: 0.2;
-            }
-        }
-    }
-}
-
-.pageSources {
-    color: #1E1E1E;
-    background-color: #f1e6d6 ;
-    padding: 10rem calc(100%/12);
-
-    a {
-        position: relative;
-        text-decoration: none;
-
-        &::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            height: 0.1rem;
-            width: 100%;
-            background-color: #1E1E1E;
-        }
-
-        &:hover {
-            opacity: 0.5;
-        }
-    }
-
-    main > a {
-        color: #1E1E1E;
-        opacity: 0.7;
-        font-size: 2rem;
-
-        @include breakpoint(900px) {
-            font-size: 1.6rem;
-        }
-
-        &:hover {
-            opacity: 0.5;
-        }
-    }
-
-    h1 {
-        margin-top: 5rem;
-        margin-bottom: 2rem;
-        font-size: 5rem;
-        font-weight: 500;
-
-        @include breakpoint(900px) {
-            font-size: 3.2rem;
-        }
-    }
-
-    main ul {
-        list-style: none;
-
-        li a {
-            color: #1E1E1E ;
-            font-size: 2rem;
-
-            @include breakpoint(900px) {
-                font-size: 1.6rem;
-            }
-        }
-    }
-    
-
-    footer {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100vw;
-
-        a {
-            color: #1E1E1E;
-        }
-    }
 }
