--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -13,7 +13,7 @@ footer ul {
         color: #ffffff;
         font-size: 1.6rem;
 
-        @include breakpoint(900px) {
+        @include breakpoint(medium) {
             color: $clr-dark;
         }
 
