--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -16,7 +16,7 @@
     column-gap: 1rem;
     padding-bottom: 7rem;
 
-    @include breakpoint(900px) {
+    @include breakpoint(medium) {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -32,7 +32,7 @@
         white-space: nowrap;
         grid-area: h1;
 
-        @include breakpoint(900px) {
+        @include breakpoint(medium) {
             margin-bottom: 1rem;
         }
     }
@@ -58,7 +58,7 @@
             grid-area: h2_2;
         }
 
-        @include breakpoint(900px) {
+        @include breakpoint(medium) {
             font-size: 2.5rem;
             line-height: 2.5rem;
             opacity: 0.8;
@@ -79,7 +79,7 @@
         transform: translateY(-0.6rem);
         grid-area: line;
 
-        @include breakpoint(900px) {
+        @include breakpoint(medium) {
             display: none;
         }
     }
@@ -88,7 +88,7 @@
         /* image qui s'affiche que sur mobile, à la place de l'image de fond */
         display: none;
 
-        @include breakpoint(900px) {
+        @include breakpoint(medium) {
             display: inline;
             width: 100%;
             margin-bottom: 1rem;
